--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -9,8 +9,7 @@
         position: fixed;
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        padding: 0 3em;
+        padding: 0 2em;
         color: var(--secondary);
         width: 100%;
     }
@@ -29,26 +28,16 @@
         border-radius: 5px;
         transition: 0.3s ease;
         text-decoration: none;
-
     }
 
     nav > a {
-        font-size: var(--topperFontSize);
-        padding-top: 0.3em;
+        font-size: 2rem;
+        padding: 0.3em;
         font-weight: bold;
         color: var(--secondary);
         text-decoration: none; 
     }
 }
-
-/* Desktop */
-@media only screen and (min-width: 60rem) {
-    nav a {
-        font-size: var(--desktopTopperFontSize);
-    }
-}
-
-
 
 /* ============================================ */
 /*                     Footer                   */
