--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -3,39 +3,63 @@
 /* ============================================ */
 /* Mobile */
 @media only screen and (min-width: 0rem) {
-    nav {
-        z-index:9999;
-        background: var(--nav);
-        position: fixed;
-        display: flex;
-        justify-content: space-between;
-        padding: 0 2em;
-        color: var(--secondary);
+    .off-screen-menu {
+        background-color: black;
+        height: 100dvh;
         width: 100%;
-    }
-
-    nav ul {
+        max-width: 450px;
+        position: fixed;
+        top: 0;
+        right: -450px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        gap: 5em;
-        margin-right: 25em;
-        list-style: none;
+        align-items: center;
+        text-align: center;
+        font-size: 3rem;
+        transition: 0.3 ease;
     }
-
-    nav ul a {
-        color: black;
-        padding: 5px 15px;
-        border-radius: 5px;
-        transition: 0.3s ease;
-        text-decoration: none;
+    .off-screen-menu.active {
+        right: 0;
     }
-
-    nav > a {
-        font-size: 2rem;
-        padding: 0.3em;
-        font-weight: bold;
-        color: var(--secondary);
-        text-decoration: none; 
+    nav {
+        padding: 1rem;
+        display: flex;
+        background-color: black;
+    }
+    .menu {
+        height: 50px;
+        width: 50px;
+        margin-left: auto;
+        position: relative;
+    }
+    .menu span {
+        height: 5px;
+        width: 100%;
+        background-color: blue;
+        border-radius: 25px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: .3s ease;
+    }
+    .menu span:nth-child(1) {
+        top: 25%;
+    }
+    .menu span:nth-child(3) {
+        top: 75%;
+    }
+    .menu.active span:nth-child(1) {
+        top: 50%;
+        transform: translate(-50%, -50%) rotate(45deg);
+    }
+    .menu.active span:nth-child(2) {
+        opacity: 0;
+    }
+    .menu.active span:nth-child(3) {
+        top: 50%;
+        transform: translate(-50%, -50%) rotate(-45deg);
     }
 }
 
