--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,11 @@
 
         }
 
-        .centered h1, p {
+        .centered h1 {
+                padding-bottom: 0.5em;
+        }
+
+        .p {
                 padding-top: 1em;
         }
 
@@ -98,15 +102,5 @@
 
         img {
                 width: 70%;
-        }
-}
-
-/*-- -------------------------- -->
-<---          Pie Chart         -->
-<--- -------------------------- -*/
-@media only screen and (min-width: 0rem) {
-        #pie_chart {
-                padding: var(--sectionPadding)
-                
         }
 }
