--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -3,40 +3,63 @@
 /* ============================================ */
 /* Mobile */
 @media only screen and (min-width: 0rem) {
+    nav .topper {
+        font-size: 1.8rem;
+        color: var(--secondary);
+    }
     .off-screen-menu {
-        background-color: black;
+        background-color: var(--nav);
         height: 100dvh;
         width: 100%;
-        max-width: 450px;
+        max-width: 6em;
         position: fixed;
         top: 0;
         right: -450px;
         display: flex;
+        padding-top: 5rem;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-items: center;
+        align-items: left;
         text-align: center;
-        font-size: 3rem;
-        transition: 0.3 ease;
+        font-size: 2.5rem;
+        transition: .3s ease;
+        z-index: 100;
     }
     .off-screen-menu.active {
         right: 0;
     }
-    nav {
-        padding: 1rem;
+    a {
         display: flex;
-        background-color: black;
+        flex-direction: column;
+        text-decoration: none;
+        font-size: clamp(2.5rem, 3.2vw, 3.3rem);
+        text-align: right;
+        color: var(--secondary);
+        padding-right: 0.5em;
+    }
+    .off-screen-menu a:hover {
+        text-decoration: underline;
+    }
+    nav {
+        z-index: 100;
+        position: fixed;
+        width: 100%;
+        padding: 0rem 2rem 0rem 2rem;
+        display: flex;
+        background-color: var(--nav);
     }
     .menu {
+        align-self: center;
         height: 50px;
         width: 50px;
+        z-index: 100;
         margin-left: auto;
         position: relative;
     }
     .menu span {
         height: 5px;
         width: 100%;
-        background-color: blue;
+        background-color: var(--secondary);
         border-radius: 25px;
         position: absolute;
         top: 50%;
@@ -60,6 +83,20 @@
     .menu.active span:nth-child(3) {
         top: 50%;
         transform: translate(-50%, -50%) rotate(-45deg);
+    }
+}
+
+/* Desktop */
+@media only screen and (min-width: 64rem) {
+    .off-screen-menu {
+        max-width: 8em;
+        padding-top: 8rem;
+    }
+    nav .topper {
+        font-size: var(--topperFontSize);
+    }
+    nav {
+        padding: 0.5rem 3rem 0.5rem 3rem;
     }
 }
 
