--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -93,6 +93,16 @@
     height: fit-content;
   }
 
+  #emoji .emoji-container .emoji-pic {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+  }
+
   #emoji.reveal{
     opacity: 1;
     pointer-events: fill;
@@ -109,32 +119,43 @@
 }
 
 /*-- -------------------------- -->
-<---      Language Options      -->
+<---      Study Options      -->
 <--- -------------------------- -*/
 /* Mobile  */
 @media only screen and (min-width: 0rem) {
-  #language-options {
+  #study-types {
     padding: var(--sectionPadding);
     padding: var(--sectionPadding);
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 50;
-    justify-items: center;
+    justify-items: center; 
     opacity: 0;
     pointer-events: none;
     backdrop-filter: blur(4px);
   }
-  #language-options .language-options-container {
+  #study-types .study-types-container {
+    display: flex;
     background-color: white;
     padding: var(--sectionPadding);
     width: fit-content;
     height: fit-content;
+    gap: 0.5em;
+    flex-wrap: wrap;
   }
-  #language-options .text {
+  #study-types .icon {
+    border: fill 0.5px lightgrey;
+    background: none;
+    color: inherit;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+  }
+  #study-types .text {
     color: black;
   }
-  #language-options.reveal {
+  #study-types.reveal {
     opacity: 1;
     pointer-events: fill;
   }
